# binance-api-testing-rust

./: .env.example  .gitignore  Cargo.toml  README.md
account_update_streaming/: Cargo.toml
account_update_streaming/src/: main.rs  settings.rs
public_data_streaming/: .env.example  Cargo.toml
public_data_streaming/src/: main.rs  main3.rs  models.rs  settings.rs
