[package]
name = "public_data_streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
futures = "0.3"                                                                  # Add this for StreamExt
log = "0.4.25"
env_logger = "0.11.6"
dotenv = "0.15.0"
chrono = "0.4.39"
fern = { version = "0.7.1", features = ["colored"] }
colored = "3.0.0"
